--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,15 @@
         android:roundIcon="@mipmap/logo_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".memorama"
+        <activity android:name=".escojer_niveles"></activity>
+        <activity
+            android:name=".memorama"
             android:parentActivityName=".menu_juegos"
-            android:screenOrientation="portrait" ></activity>
-        <activity android:name=".arrastrar_soltar"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".arrastrar_soltar"
             android:parentActivityName=".menu_juegos"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".menu_juegos"
             android:parentActivityName=".MainActivity"
